stream analysis pt2 - nae pt2